--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "laundryservices",
+  "name": "coen3463-m2t9",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,13 @@
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
-    "express": "^4.14.0",
+    "express": "~4.14.0",
     "jade": "~1.11.0",
+    "mongoose": "^4.7.5",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "nodemailer": "^2.7.0",
+    "nodemailer-smtp-transport": "^2.7.2",
+    "serve-favicon": "~2.3.0",
+    "xoauth2": "^1.2.0"
   }
 }
